# Rune

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
capabilities/: default.json
src/: custom.js  index.css  index.ts  tauri-ext.js  topic.rs
src-tauri/: Cargo.toml  iroh_local.rs  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/schemas/: acl-manifests.json
src-tauri/src/: iroh_local.rs  lib.rs  main.rs  message.rs  templates.rs  ticket.rs
