[package]
name = "iroh-tauri"
version = "2.0.0"
description = "A Tauri iroh chat client"
authors = ["Martin Clausen"]
license = "Proprietary"
default-run = "iroh-tauri"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iroh_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-error = "=0.1.3"
tauri = { version = "2.0.6", features = [] }
maud = "*"

anyhow = "1.0.95"
data-encoding = "2.7.0"
futures-lite = "2.6.0"
iroh = "0.32.0"
iroh-gossip = "0.32.0"
iroh-blobs = { version = "0.32", features = ["rpc"] }
rand = "0.8.5"
tokio = "1.43.0"
tauri-plugin-clipboard-manager = "2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.dev]
incremental = true      # Compile your binary in smaller steps.

[profile.release]
strip = true            # Automatically strip symbols from the binary
panic = "abort"         # Strip expensive panic clean-up logic
codegen-units = 1       # Compile crates one after another so the compiler can optimize better
lto = true              # Enables link to optimizations
opt-level = "s"         # Optimize for binary size. Use `3` if you prefer speed.
